# eth-market-pridiction

./: .gitignore  ADD_IMPROVEMENTS.py  FINAL_IMPROVEMENTS_SUMMARY.md  PIPELINE_IMPROVEMENTS.md  README.md  github.txt  pyproject.toml  requirements.txt
data/: README.md
data/raw/: Ethereum_01_01_2015-01_01_2016_historical_data_coinmarketcap.csv  Ethereum_01_01_2016-01_01_2017_historical_data_coinmarketcap.csv  Ethereum_01_01_2017-01_01_2018_historical_data_coinmarketcap.csv  Ethereum_01_01_2018-01_01_2019_historical_data_coinmarketcap.csv  Ethereum_01_01_2019-01_01_2020_historical_data_coinmarketcap.csv  Ethereum_01_01_2020-01_01_2021_historical_data_coinmarketcap.csv  Ethereum_01_01_2021-01_01_2022_historical_data_coinmarketcap.csv  Ethereum_01_01_2022-01_01_2023_historical_data_coinmarketcap.csv  Ethereum_01_01_2023-01_01_2024_historical_data_coinmarketcap.csv  Ethereum_01_01_2024-01_01_2025_historical_data_coinmarketcap.csv  ethereum_combined.csv
models/: README.md  best_en_params.json  best_lgbm_params.json  best_xgb_params.json
notebooks/: 36120-25SP-AT3-group_25217353-student_id.ipynb
references/: data_dictionary.md
src/: __init__.py
src/data/: __init__.py
src/models/: __init__.py
